// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no args createOne 1`] = `

Invalid \`prisma.user()\` invocation:

{
+ data: {
+   id: Int,
+   name: String,
+   email: String,
+   likedArticles?: ArticleCreateManyWithoutLikedByInput,
+   persona: PersonaCreateOneWithoutUserInput
+ }
}

Argument data is missing.

Note: Lines with + are required

`;

exports[`no args deleteOne 1`] = `

Invalid \`prisma.user()\` invocation:

{
+ where: {
+   id?: Int,
+   email?: String
+ }
}

Argument where is missing.

Note: Lines with + are required

`;

exports[`no args findMany 2`] = `

Invalid \`prisma.user()\` invocation:

{
  where: {
    likedArticles: null
                   ~~~~
  }
}

Argument likedArticles for where.likedArticles must not be null. Please use undefined instead.


`;

exports[`no args findOne 1`] = `

Invalid \`prisma.user()\` invocation:

{
+ where: {
+   id?: Int,
+   email?: String
+ }
}

Argument where is missing.

Note: Lines with + are required

`;

exports[`no args nested create 1`] = `

Invalid \`prisma.user()\` invocation:

{
  data: {
    likedArticles: {
?     create?: {
?       id: Int,
?       url: String,
?       title: String,
?       content: String,
?       date: DateTime,
?       link: LinkCreateOneWithoutArticleInput
?     },
?     connect?: {
?       id?: Int,
?       url?: String
?     }
    }
  }
}

Argument data.likedArticles.connect of type ArticleWhereUniqueInput needs at least one argument. Available args are listed in green.

Note: Lines with ? are optional.

`;

exports[`no args updateMany 1`] = `

Invalid \`prisma.user()\` invocation:

{
+ data: {
+   id?: Int,
+   name?: String,
+   email?: String
+ },
? where?: {
?   AND?: UserWhereInput,
?   OR?: UserWhereInput,
?   NOT?: UserWhereInput,
?   id?: IntFilter,
?   name?: StringFilter,
?   email?: StringFilter,
?   likedArticles?: ArticleListRelationFilter,
?   personaId?: IntFilter,
?   persona?: PersonaRelationFilter
? }
}

Argument data is missing.

Note: Lines with + are required, lines with ? are optional.

`;

exports[`no args upsertOne 1`] = `

Invalid \`prisma.user()\` invocation:

{
+ where: {
+   id?: Int,
+   email?: String
+ },
+ create: {
+   id: Int,
+   name: String,
+   email: String,
+   likedArticles?: ArticleCreateManyWithoutLikedByInput,
+   persona: PersonaCreateOneWithoutUserInput
+ },
+ update: {
+   id?: Int,
+   name?: String,
+   email?: String,
+   likedArticles?: ArticleUpdateManyWithoutLikedByInput,
+   persona?: PersonaUpdateOneRequiredWithoutUserInput
+ }
}

Argument where is missing.
Argument create is missing.
Argument update is missing.

Note: Lines with + are required

`;
